--- a/portfolio.html
+++ b/portfolio.html
@@ -43,13 +43,11 @@
           <div class="header-contacts list">
             <a href="mailto:info@devstudio.com" class="header-email link">
               <svg class="contacts-icon-envelope" width="16" height="12">
-                <use href="./img/contacts-icon.svg#icon-email-envelope"></use></svg
-              >info@devstudio.com</a
-            ><a href="tel:+380961111111" class="header-tel link list">
+                <use href="./img/contacts-icon.svg#icon-email-envelope"></use>
+              </svg>info@devstudio.com</a><a href="tel:+380961111111" class="header-tel link list">
               <svg class="contacts-icon-smartphone" width="10" height="16">
-                <use href="./img/contacts-icon.svg#icon-smartphone"></use></svg
-              >+38 096 111 11 11</a
-            >
+                <use href="./img/contacts-icon.svg#icon-smartphone"></use>
+              </svg>+38 096 111 11 11</a>
           </div>
         </div>
       </div>
