Додає ховер текст в картці портфоліо з багом

--- a/portfolio.html
+++ b/portfolio.html
@@ -43,11 +43,14 @@
           <div class="header-contacts list">
             <a href="mailto:info@devstudio.com" class="header-email link">
               <svg class="contacts-icon-envelope" width="16" height="12">
-                <use href="./img/contacts-icon.svg#icon-email-envelope"></use>
-              </svg>info@devstudio.com</a><a href="tel:+380961111111" class="header-tel link list">
+                <use href="./img/contacts-icon.svg#icon-email-envelope"></use></svg
+              >info@devstudio.com</a
+            >
+            <a href="tel:+380961111111" class="header-tel link list">
               <svg class="contacts-icon-smartphone" width="10" height="16">
-                <use href="./img/contacts-icon.svg#icon-smartphone"></use>
-              </svg>+38 096 111 11 11</a>
+                <use href="./img/contacts-icon.svg#icon-smartphone"></use></svg
+              >+38 096 111 11 11</a
+            >
           </div>
         </div>
       </div>
@@ -65,8 +68,14 @@
           <ul class="portfolio-list list">
             <li class="portfolio-item">
               <a href="./portfolio.html" class="link">
-                <img src="./img/portfolio-img-1.jpg" alt="Веб-сайт" width="370" height="294" />
-                <p class="portfolio-item-hover-text"></p>
+                <div class="portfolio-top-wrap">
+                  <img src="./img/portfolio-img-1.jpg" alt="Веб-сайт" width="370" height="294" />
+                  <p class="portfolio-item-hover-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="portfolio-text">
                   <h2 class="portfolio-item-title">Технокряк</h2>
                   <p class="portfolio-item-descr">Веб-сайт</p>
