--- a/portfolio.html
+++ b/portfolio.html
@@ -84,8 +84,14 @@
             </li>
             <li class="portfolio-item">
               <a href="./portfolio.html" class="link">
-                <img src="./img/portfolio-img-2.jpg" alt="Дизайн" width="370" height="294" />
-                <p class="portfolio-item-hover-text"></p>
+                <div class="portfolio-top-wrap">
+                  <img src="./img/portfolio-img-2.jpg" alt="Дизайн" width="370" height="294" />
+                  <p class="portfolio-item-hover-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="portfolio-text">
                   <h2 class="portfolio-item-title">Постер New Orlean vs Golden Star</h2>
                   <p class="portfolio-item-descr">Дизайн</p>
@@ -94,8 +100,14 @@
             </li>
             <li class="portfolio-item">
               <a href="./portfolio.html" class="link">
-                <img src="./img/portfolio-img-3.jpg" alt="Додаток" width="370" height="294" />
-                <p class="portfolio-item-hover-text"></p>
+                <div class="portfolio-top-wrap">
+                  <img src="./img/portfolio-img-3.jpg" alt="Додаток" width="370" height="294" />
+                  <p class="portfolio-item-hover-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="portfolio-text">
                   <h2 class="portfolio-item-title">Ресторан Seafood</h2>
                   <p class="portfolio-item-descr">Додаток</p>
@@ -104,8 +116,14 @@
             </li>
             <li class="portfolio-item">
               <a href="./portfolio.html" class="link">
-                <img src="./img/portfolio-img-4.jpg" alt="Маркетинг" width="370" height="294" />
-                <p class="portfolio-item-hover-text"></p>
+                <div class="portfolio-top-wrap">
+                  <img src="./img/portfolio-img-4.jpg" alt="Маркетинг" width="370" height="294" />
+                  <p class="portfolio-item-hover-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="portfolio-text">
                   <h2 class="portfolio-item-title">Проєкт Prime</h2>
                   <p class="portfolio-item-descr">Маркетинг</p>
@@ -114,8 +132,14 @@
             </li>
             <li class="portfolio-item">
               <a href="./portfolio.html" class="link">
-                <img src="./img/portfolio-img-5.jpg" alt="Додаток" width="370" height="294" />
-                <p class="portfolio-item-hover-text"></p>
+                <div class="portfolio-top-wrap">
+                  <img src="./img/portfolio-img-5.jpg" alt="Додаток" width="370" height="294" />
+                  <p class="portfolio-item-hover-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="portfolio-text">
                   <h2 class="portfolio-item-title">Проєкт Boxes</h2>
                   <p class="portfolio-item-descr">Додаток</p>
@@ -124,8 +148,14 @@
             </li>
             <li class="portfolio-item">
               <a href="./portfolio.html" class="link">
-                <img src="./img/portfolio-img-6.jpg" alt="Веб-сайт" width="370" height="294" />
-                <p class="portfolio-item-hover-text"></p>
+                <div class="portfolio-top-wrap">
+                  <img src="./img/portfolio-img-6.jpg" alt="Веб-сайт" width="370" height="294" />
+                  <p class="portfolio-item-hover-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="portfolio-text">
                   <h2 class="portfolio-item-title">Inspiration has no Borders</h2>
                   <p class="portfolio-item-descr">Веб-сайт</p>
@@ -134,8 +164,14 @@
             </li>
             <li class="portfolio-item">
               <a href="./portfolio.html" class="link">
-                <img src="./img/portfolio-img-7.jpg" alt="Дизайн" width="370" height="294" />
-                <p class="portfolio-item-hover-text"></p>
+                <div class="portfolio-top-wrap">
+                  <img src="./img/portfolio-img-7.jpg" alt="Дизайн" width="370" height="294" />
+                  <p class="portfolio-item-hover-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="portfolio-text">
                   <h2 class="portfolio-item-title">Видання Limited Edition</h2>
                   <p class="portfolio-item-descr">Дизайн</p>
@@ -144,8 +180,14 @@
             </li>
             <li class="portfolio-item">
               <a href="./portfolio.html" class="link">
-                <img src="./img/portfolio-img-8.jpg" alt="Маркетинг" width="370" height="294" />
-                <p class="portfolio-item-hover-text"></p>
+                <div class="portfolio-top-wrap">
+                  <img src="./img/portfolio-img-8.jpg" alt="Маркетинг" width="370" height="294" />
+                  <p class="portfolio-item-hover-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="portfolio-text">
                   <h2 class="portfolio-item-title">Проект LAB</h2>
                   <p class="portfolio-item-descr">Маркетинг</p>
@@ -154,8 +196,14 @@
             </li>
             <li class="portfolio-item">
               <a href="./portfolio.html" class="link">
-                <img src="./img/portfolio-img-9.jpg" alt="Додаток" width="370" height="294" />
-                <p class="portfolio-item-hover-text"></p>
+                <div class="portfolio-top-wrap">
+                  <img src="./img/portfolio-img-9.jpg" alt="Додаток" width="370" height="294" />
+                  <p class="portfolio-item-hover-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="portfolio-text">
                   <h2 class="portfolio-item-title">Growing Business</h2>
                   <p class="portfolio-item-descr">Додаток</p>
