--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <a href="./index.html" class="header-logo link"
             >Web<span style="color: #000000">Studio</span></a
           >
-          <ul class="header-list list current">
+          <ul class="header-list list">
             <li class="header-item">
               <a href="./index.html" class="header-link link">Студія</a>
             </li>
