--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
           <a href="./index.html" class="header-logo link"
             >Web<span style="color: #000000">Studio</span></a
           >
-          <ul class="header-list list current">
+          <ul class="header-list list">
             <li class="header-item">
-              <a href="./index.html" class="header-link link">Студія</a>
+              <a href="./index.html" class="header-link link current">Студія</a>
             </li>
             <li class="header-item">
               <a href="./portfolio.html" class="header-link link">Портфоліо</a>
@@ -348,7 +348,7 @@
         </div>
       </section>
     </main>
-    <section class="footer">
+    <footer class="footer">
       <div class="container">
         <div class="footer-logo-adress">
           <a href="/index.html" class="footer-logo link"
@@ -410,7 +410,7 @@
           </ul>
         </div>
       </div>
-    </section>
+    </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close" data-modal-close>
