--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
               <a href="./index.html" class="header-link link">Студія</a>
             </li>
             <li class="header-item">
-              <a href="./portfolio.html" class="header-link link">Портфоліо</a>
+              <a href="./portfolio.html" class="header-link link current">Портфоліо</a>
             </li>
             <li class="header-item">
               <a href="" class="header-link link">Контакти</a>
@@ -214,7 +214,7 @@
         </div>
       </section>
     </main>
-    <section class="footer">
+    <footer class="footer">
       <div class="container">
         <div class="footer-logo-adress">
           <a href="/index.html" class="footer-logo link"
@@ -276,6 +276,6 @@
           </ul>
         </div>
       </div>
-    </section>
+    </footer>
   </body>
 </html>
